MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/Verification_Request__c.object-meta.xml
<CustomObject>
    <label>Verification Request</label>
    <nameField>
        <displayFormat>VR-{000000}</displayFormat>
        <label>Verification Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>