MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Code_Hash__c.field-meta.xml
<CustomField>
    <fullName>Code_Hash__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>