MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Context</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>