MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Context_Key__c.field-meta.xml
<CustomField>
    <fullName>Context_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Context Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>