MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expires At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>