MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Last_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Sent_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Sent At</label>
    <type>DateTime</type>
</CustomField>