MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Masked_Target__c.field-meta.xml
<CustomField>
    <fullName>Masked_Target__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Masked Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>