MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Resend_Available_At__c.field-meta.xml
<CustomField>
    <fullName>Resend_Available_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resend Available At</label>
    <type>DateTime</type>
</CustomField>