MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Resend_Count__c.field-meta.xml
<CustomField>
    <fullName>Resend_Count__c</fullName>
    <label>Resend Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>