MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>