MODON MRE BPDEV/force-app/main/default/objects/Verification_Request__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verified At</label>
    <type>DateTime</type>
</CustomField>